Remove standard maven-compiler plugin for applications with boot parent - gh-428 (#508)
- Add New recipe and condition
- Enhance PomBuilder.java
- Use MavenBuildFileRefactoring to apply recipe, similar to JavaRefactoring
- Refactor getPlugins() method in OpenRewriteMavenBuildFile
- Extract Plugin interface and refactor Maven Plugin implementation
- Create new interface `Plugin#Configuration` and implementation
- Refactor `Plugin#Execution` into `OpenRewriteMavenPlugin#OpenRewriteMavenPluginExecution`
- Add deleteProperty() API to BuildFile
- setProperty() API no longer removes the maven property if the value supplied is null.
- Add maven plugin configuration to PomBuilder
- Use Jackson XML pretty print to generate XML string for plugin configuration
- Add findPlugins API to BuildFile
- Use Plugin interface instead of OpenRewriteMavenPlugin implementation in dealing with objects
- Refactor Maven compiler plugin actions
- Clean up BuildFile API